Closed Bug 653056 Opened 15 years ago Closed 14 years ago

Figure out why Visual Studio PGO miscompiles JSDOUBLE_IS_NAN

Categories

(Core :: JavaScript Engine, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: glandium, Assigned: glandium)

References

Details

(Whiteboard: [inbound])

Attachments

(1 file, 1 obsolete file)

No description provided.
I found in bug 653777 that this variant apparently doesn't trigger the MSVC miscompilation. However, the patch there was also moving the function, so I'll push to try to confirm this version is fine.
Attachment #546008 - Flags: review?(jimb)
Does MSVC2010 have the issue as well?
JSDOUBLE_HI32_NAN needed to be moved, so I moved the whole block of defines
Attachment #546102 - Flags: review?(jimb)
Attachment #546008 - Attachment is obsolete: true
Attachment #546008 - Flags: review?(jimb)
Assignee: general → mh+mozilla
Comment on attachment 546102 [details] [diff] [review] Use a bitwise version of JSDOUBLE_IS_NaN that Visual Studio PGO doesn't miscompile Review of attachment 546102 [details] [diff] [review]: ----------------------------------------------------------------- Thanks!
Attachment #546102 - Flags: review?(jimb) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: